--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -58,7 +58,8 @@
 .horizontal-ruler {
   display: flex;
   justify-content: space-between;
-  padding-left: 40px; /* Space for the vertical ruler */
+  padding-top: 10px;
+  padding-left: 40px;
   margin-bottom: 5px;
   font-size: 12px;
   color: #333;
@@ -77,10 +78,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 40px;
   margin-right: 5px;
   font-size: 12px;
   color: #333;
+  padding-left: 10px;
 }
 
 .vertical-ruler div {
@@ -90,7 +91,7 @@
 
 .example-box {
   position: absolute;
-  border: solid 1px #000000;
+  // border: solid 1px #000000;
   color: rgba(0, 0, 0, 0.87);
   cursor: move;
   display: inline-flex;
