--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -173,33 +173,74 @@ h3 {
   width: 40px; 
   height: 40px;
   object-fit:contain;
-  // border: 1px solid #ccc;
+}
+
+.view-objects-button {
+  background-color: #ccc;
+  border: none;
+  border-radius: 15px;
+  width: 40px;
+  height: 20px;
+  position: relative;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-left: 86%; 
+}
+
+.view-objects-button:before {
+  content: '';
+  position: absolute;
+  width: 18px; 
+  height: 18px;
+  background-color: white;
+  border-radius: 50%;
+  top: 1px;
+  left: 1px;
+  transition: left 0.3s ease;
+}
+
+.view-objects-button.on {
+  background-color: #58a860; 
+}
+
+.view-objects-button.on:before {
+  left: 21px; 
+}
+
+
+.button-style{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  background-color: #eceff1;
+  cursor: pointer;
+  height: 36px;
 }
 
 .savebutton {
-  padding: 10px 14px;
-  margin-bottom: 10px;
-  background-color: #42a5f5; 
+  background-color: #90a4ae; 
+  transition: background-color 0.3s ease;
   border: none;
   color: #fff;
+  padding: 5px 14px;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
 }
 
 .savebutton:disabled {
-  background-color: #90a4ae;
+  background-color: #bbc1c4;
 }
 
 .savebutton:hover {
-  background-color: #1e88e5;
+  background-color: #58a860;
 }
 
 .deletebutton {
   position: absolute;
   top: 6px;
   right: 6px;
-  background-color: #de8383;
+  background-color: #964040;
   border: none;
   color: #fff;
   padding: 5px 10px;
@@ -234,7 +275,7 @@ h3 {
 
 button {
   padding: 10px 14px;
-  background-color: #42a5f5; 
+  background-color: #90a4ae; 
   border: none;
   color: #fff;
   border-radius: 4px;
@@ -243,11 +284,12 @@ button {
 }
 
 button:disabled {
-  background-color: #90a4ae;
+  background-color: #bbc1c4;
+
 }
 
 button:hover {
-  background-color: #1e88e5;
+  background-color: #58a860;
 }
 
 .rotate-button {
@@ -273,7 +315,7 @@ button:hover {
 }
 
 .delete-object-button:hover {
-  background-color: #e53935;
+  background-color: #e5383562;
 }
 
 .unlock-object-button {
@@ -321,14 +363,26 @@ button:hover {
 }
 
 .inside-menu-item {
-  border: 1px solid #455a64;
-  padding: 10px;
+  overflow: hidden; 
+  max-height: 0; 
+  transition: max-height 0.5s ease, padding 0.5s ease; 
+  padding: 0 10px; 
   background-color: #eceff2; 
+  border: 1px solid #455a64;
+}
+
+.show {
+  max-height: 500px; 
+  padding: 10px; 
 }
 
 .arrow {
   margin-left: 10px; 
-  font-size: 16px; 
+  transition: transform 0.3s ease;
+}
+
+.arrow.rotate {
+  transform: rotate(180deg);
 }
 
 @media screen and (max-width: 768px) {
