--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 body {
   margin: 0px;
+  // height: 100vh;
   background-color: #eceff2; 
+  // background-image: linear-gradient( #c8cbce, #eceff2);
   font-family: 'Lato', sans-serif; 
 }
