--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,7 +1,7 @@
 .head-container {
   height: 80px;
   color: rgb(255, 255, 255);
-  background-color: #546e7a; 
+  background-image: linear-gradient(to right, #0e2c3a , #0b1f28);
   padding-top: 10px;
   padding-left: 20px;
   border-bottom: 2px solid #455a64;
@@ -259,7 +259,7 @@ h3 {
 .form-group label {
   display: block;
   font-weight: bold;
-  color: #607d8b;
+  color: #0e2c3a;
   margin-bottom: 5px;
 }
 
@@ -334,7 +334,9 @@ button:hover {
 }
 
 .menu-items{
-  background-color: #546e7a;
+  background-color: #0e2c3a; 
+  background-image: linear-gradient(#0e2c3a , #0b1f28);
+
 }
 
 .menu-items-button {
@@ -348,7 +350,7 @@ button:hover {
   display: flex;
   justify-content: space-between;
   align-items: center; 
-  background-color: #546e7a;
+  background-color: #0e2c3a; 
   color: white;
   padding: 16px;
   margin: 0px;
@@ -357,7 +359,7 @@ button:hover {
 
 
 .collapsible-header:hover {
-  background-color: #455a64;
+  background-color: #0b1f28;
 }
 
 .inside-menu-item {
