--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
-  // height: 100vh;
-  background-color: #eceff2; 
-  // background-image: linear-gradient( #c8cbce, #eceff2);
+  height: 100vh;
+  // background-color: #eceff2; 
+  background-image: linear-gradient( #eceff2, #f3f5f7);
   font-family: 'Lato', sans-serif; 
 }
