--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -384,9 +384,12 @@ button:hover {
   transform: rotate(180deg);
 }
 
+.footer {
+  height: 20px;
+  margin-top: 10px;
+}
+
 .credits {
-  position: absolute;
-  bottom: 10px;
   padding-left: 10px;
   color: black;
   text-decoration: none;
