--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -263,7 +263,7 @@ h3 {
   margin-bottom: 5px;
 }
 
-.form-group input[type='number'],
+// .form-group input[type='number'],
 .form-group input[type='text'] {
   width: 100%;
   padding: 8px;
@@ -364,7 +364,7 @@ button:hover {
 .inside-menu-item {
   overflow: hidden; 
   max-height: 0; 
-  transition: max-height 0.5s ease, padding 0.5s ease; 
+  transition: max-height 0.3s ease, padding 0.5s ease; 
   padding: 0 10px; 
   background-color: #eceff2; 
   border-right: 1px solid #455a64;
@@ -398,6 +398,58 @@ button:hover {
 
 .credits:hover {
   text-decoration: underline;
+}
+
+.addtogrid-style {
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-around;
+  align-items: center;
+  border-bottom: 1px solid #455a64;
+  padding-bottom: 5px;
+}
+
+.addtogrid-label {
+  margin-right: 60px;
+  margin-top: 5px;
+}
+
+.addtogrid-button {
+  background-color: #90a4ae; 
+  transition: background-color 0.3s ease;
+  border: none;
+  color: #fff;
+  padding: 10px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.addtogrid-input {
+  background-color: #eceff2;
+  padding: 4px;
+  border-radius: 5px;
+  width: 30px;
+  height: 30px;
+  -webkit-appearance: none;
+  -moz-appearance: textfield;
+  text-align: center;
+} 
+
+.inside-export {
+  display: flex;
+  flex-direction: column;
+} 
+
+.email-input {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.ratio {
+  margin-top: 12px;
+  font-size: small;
 }
 
 @media screen and (max-width: 768px) {
