--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -240,6 +240,6 @@
   </div>
 </div>
 <div class="footer">
-  <a href="https://scholsdev.azurewebsites.net/" target="_blank" class="credits">Created by Joran Schols, 2024</a> 
+  <a href="https://scholsdev.azurewebsites.net/" target="_blank" class="credits">Created by FlamSoft, 2024</a> 
 </div>
 
