--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="head-container">
-  <h1>Sketch-A-Room</h1>
+  <h1>Sketch Studio 2D</h1>
 </div>
 <div class="main-container">
       <div class="menu-items">
